// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshots Routines Référence Snapshot 1: Essentiel + Express → Routine minimale conforme: essentiel-express-minimal 1`] = `
{
  "dermatologicalRationale": "Routine minimaliste ciblée peau mixte avec priorité pores zone T",
  "globalAdvice": [
    "Routine calée sur budget Essentiel : 1 traitement ciblé, soins multifonctions privilégiés",
    "Style Express respecté : routine épurée matin (3 étapes) et soir (3 étapes)",
    "Protection solaire SPF30-50 indispensable UV Risk Moderate",
  ],
  "phases": {
    "adaptation": {
      "description": "Introduction traitement ciblé pores",
      "duration": "4 semaines",
      "steps": [
        {
          "alternatives": [],
          "applicationDuration": "progressive",
          "applicationInstructions": "Le soir uniquement. Appliquer zone T après nettoyage.",
          "careType": "traitement",
          "displayTitle": "Traitement Pores dilatés",
          "frequency": "quotidien",
          "introduceFromWeek": 0,
          "isTemporary": true,
          "progressiveIntroduction": null,
          "restrictions": [
            "Soir uniquement",
            "Éviter contour yeux",
          ],
          "stepId": "adap-traitement-pores",
          "stepNumber": 1,
          "targetBenefit": "Affinement grain de peau",
          "targetProblem": "Pores dilatés",
          "targetZones": [
            "front",
            "nez",
          ],
          "timing": "soir",
        },
      ],
    },
    "immediate": {
      "description": "Phase de stabilisation - Mise en place base durable",
      "duration": "3 semaines",
      "steps": [
        {
          "alternatives": [],
          "applicationDuration": "continu",
          "applicationInstructions": "Matin sur visage humide, masser délicatement, rincer",
          "careType": "nettoyage",
          "displayTitle": "Nettoyage doux matin",
          "frequency": "quotidien",
          "introduceFromWeek": 0,
          "isTemporary": false,
          "progressiveIntroduction": null,
          "restrictions": [],
          "stepId": "imm-nettoyage-matin",
          "stepNumber": 1,
          "targetBenefit": "Préparation optimale",
          "targetProblem": "Préparation de la peau",
          "targetZones": [
            "visage entier",
          ],
          "timing": "matin",
        },
        {
          "alternatives": [],
          "applicationDuration": "continu",
          "applicationInstructions": "Soir, double nettoyage si maquillage",
          "careType": "nettoyage",
          "displayTitle": "Nettoyage doux soir",
          "frequency": "quotidien",
          "introduceFromWeek": 0,
          "isTemporary": false,
          "progressiveIntroduction": null,
          "restrictions": [],
          "stepId": "imm-nettoyage-soir",
          "stepNumber": 2,
          "targetBenefit": "Élimination impuretés",
          "targetProblem": "Préparation de la peau",
          "targetZones": [
            "visage entier",
          ],
          "timing": "soir",
        },
        {
          "alternatives": [],
          "applicationDuration": "continu",
          "applicationInstructions": "Appliquer SPF30-50 matin, renouveler si exposition prolongée",
          "careType": "protection",
          "displayTitle": "Protection SPF",
          "frequency": "quotidien",
          "introduceFromWeek": 0,
          "isTemporary": false,
          "progressiveIntroduction": null,
          "restrictions": [],
          "stepId": "imm-protection",
          "stepNumber": 3,
          "targetBenefit": "Protection UV",
          "targetProblem": "Protection solaire",
          "targetZones": [
            "visage entier",
          ],
          "timing": "matin",
        },
        {
          "alternatives": [],
          "applicationDuration": "continu",
          "applicationInstructions": "Matin avant SPF",
          "careType": "hydratation",
          "displayTitle": "Hydratation légère matin",
          "frequency": "quotidien",
          "introduceFromWeek": 0,
          "isTemporary": false,
          "progressiveIntroduction": null,
          "restrictions": [],
          "stepId": "imm-hydratation-matin",
          "stepNumber": 4,
          "targetBenefit": "Hydratation jour",
          "targetProblem": "Hydratation",
          "targetZones": [
            "visage entier",
          ],
          "timing": "matin",
        },
        {
          "alternatives": [],
          "applicationDuration": "continu",
          "applicationInstructions": "Soir après nettoyage",
          "careType": "hydratation",
          "displayTitle": "Hydratation riche soir",
          "frequency": "quotidien",
          "introduceFromWeek": 0,
          "isTemporary": false,
          "progressiveIntroduction": null,
          "restrictions": [],
          "stepId": "imm-hydratation-soir",
          "stepNumber": 5,
          "targetBenefit": "Hydratation nuit",
          "targetProblem": "Hydratation",
          "targetZones": [
            "visage entier",
          ],
          "timing": "soir",
        },
      ],
    },
    "maintenance": {
      "description": "Maintien résultats long terme",
      "steps": [],
    },
  },
}
`;

exports[`Snapshots Routines Référence Snapshot 2: Confort + Équilibrée → 2 traitements alternance: confort-equilibree-alternance 1`] = `
{
  "dermatologicalRationale": "Routine complète peau mixte mature : affinement texture + anti-âge préventif avec alternance sécurisée",
  "globalAdvice": [
    "Routine adaptée budget Confort : 2 traitements alternés + 1 masque hebdomadaire",
    "Style Équilibrée respecté : 3 étapes matin, 4 étapes soir",
    "Alternance AHA/Rétinol stricte pour éviter irritation cumulative",
    "Protection solaire SPF50+ indispensable (actifs photosensibilisants)",
  ],
  "phases": {
    "adaptation": {
      "description": "Introduction 2 traitements alternés",
      "duration": "6 semaines",
      "steps": [
        {
          "alternatives": [],
          "applicationDuration": "progressive",
          "applicationInstructions": "Le soir uniquement. Alterner avec "Traitement Rides" : ne pas cumuler le même soir. Commencer 2 soirs/semaine (Lun, Mer), augmenter à 3 après 2 semaines si toléré (+ Ven). Attendre ~10 min avant hydratation. Éviter contour yeux/lèvres.",
          "careType": "traitement",
          "displayTitle": "Traitement Éclat + Texture",
          "frequency": "quotidien",
          "introduceFromWeek": 0,
          "isTemporary": true,
          "progressiveIntroduction": null,
          "restrictions": [
            "Ne pas cumuler avec autre traitement le même soir",
            "Éviter contour yeux et lèvres",
            "SPF strict le lendemain",
          ],
          "stepId": "adap-traitement-aha",
          "stepNumber": 1,
          "targetBenefit": "Renouvellement cellulaire",
          "targetProblem": "Éclat + Texture",
          "targetZones": [
            "visage entier",
          ],
          "timing": "soir",
          "ui": {
            "avoidEyeArea": true,
            "isPhotosensitizing": true,
            "maxPerNight": 1,
            "needsAlternation": true,
            "pairWithStepId": "adap-traitement-retinol",
            "suggestedNights": [
              "Lun",
              "Mer",
              "Ven",
            ],
          },
        },
        {
          "alternatives": [],
          "applicationDuration": "progressive",
          "applicationInstructions": "Le soir uniquement. Alterner avec "Traitement Éclat + Texture" : ne pas cumuler le même soir. Commencer 2 soirs/semaine (Mar, Jeu), augmenter à 3 après 2 semaines si toléré (+ Sam). Attendre ~10 min avant hydratation. Éviter contour yeux/lèvres.",
          "careType": "traitement",
          "displayTitle": "Traitement Rides",
          "frequency": "quotidien",
          "introduceFromWeek": 1,
          "isTemporary": true,
          "progressiveIntroduction": null,
          "restrictions": [
            "Interdit grossesse/allaitement",
            "Ne pas cumuler avec AHA le même soir",
            "Éviter contour yeux et lèvres",
            "Arrêter si brûlure >72h",
          ],
          "stepId": "adap-traitement-retinol",
          "stepNumber": 2,
          "targetBenefit": "Renouvellement anti-âge",
          "targetProblem": "Rides",
          "targetZones": [
            "visage entier",
          ],
          "timing": "soir",
          "ui": {
            "avoidEyeArea": true,
            "isIrritant": true,
            "maxPerNight": 1,
            "needsAlternation": true,
            "pairWithStepId": "adap-traitement-aha",
            "suggestedNights": [
              "Mar",
              "Jeu",
              "Sam",
            ],
          },
        },
      ],
    },
    "immediate": {
      "description": "Base durable",
      "duration": "3 semaines",
      "steps": [
        {
          "alternatives": [],
          "applicationDuration": "continu",
          "applicationInstructions": "Matin sur visage humide, masser délicatement, rincer",
          "careType": "nettoyage",
          "displayTitle": "Nettoyage doux matin",
          "frequency": "quotidien",
          "introduceFromWeek": 0,
          "isTemporary": false,
          "progressiveIntroduction": null,
          "restrictions": [],
          "stepId": "imm-nettoyage-matin",
          "stepNumber": 1,
          "targetBenefit": "Préparation optimale",
          "targetProblem": "Préparation de la peau",
          "targetZones": [
            "visage entier",
          ],
          "timing": "matin",
        },
        {
          "alternatives": [],
          "applicationDuration": "continu",
          "applicationInstructions": "Soir, double nettoyage si maquillage",
          "careType": "nettoyage",
          "displayTitle": "Nettoyage doux soir",
          "frequency": "quotidien",
          "introduceFromWeek": 0,
          "isTemporary": false,
          "progressiveIntroduction": null,
          "restrictions": [],
          "stepId": "imm-nettoyage-soir",
          "stepNumber": 2,
          "targetBenefit": "Élimination impuretés",
          "targetProblem": "Préparation de la peau",
          "targetZones": [
            "visage entier",
          ],
          "timing": "soir",
        },
        {
          "alternatives": [],
          "applicationDuration": "continu",
          "applicationInstructions": "Appliquer SPF30-50 matin, renouveler si exposition prolongée",
          "careType": "protection",
          "displayTitle": "Protection SPF",
          "frequency": "quotidien",
          "introduceFromWeek": 0,
          "isTemporary": false,
          "progressiveIntroduction": null,
          "restrictions": [],
          "stepId": "imm-protection",
          "stepNumber": 3,
          "targetBenefit": "Protection UV",
          "targetProblem": "Protection solaire",
          "targetZones": [
            "visage entier",
          ],
          "timing": "matin",
        },
        {
          "alternatives": [],
          "applicationDuration": "continu",
          "applicationInstructions": "Matin avant SPF",
          "careType": "hydratation",
          "displayTitle": "Hydratation légère matin",
          "frequency": "quotidien",
          "introduceFromWeek": 0,
          "isTemporary": false,
          "progressiveIntroduction": null,
          "restrictions": [],
          "stepId": "imm-hydratation-matin",
          "stepNumber": 4,
          "targetBenefit": "Hydratation jour",
          "targetProblem": "Hydratation",
          "targetZones": [
            "visage entier",
          ],
          "timing": "matin",
        },
        {
          "alternatives": [],
          "applicationDuration": "continu",
          "applicationInstructions": "Soir après nettoyage",
          "careType": "hydratation",
          "displayTitle": "Hydratation riche soir",
          "frequency": "quotidien",
          "introduceFromWeek": 0,
          "isTemporary": false,
          "progressiveIntroduction": null,
          "restrictions": [],
          "stepId": "imm-hydratation-soir",
          "stepNumber": 5,
          "targetBenefit": "Hydratation nuit",
          "targetProblem": "Hydratation",
          "targetZones": [
            "visage entier",
          ],
          "timing": "soir",
        },
      ],
    },
    "maintenance": {
      "description": "Maintien long terme",
      "steps": [
        {
          "alternatives": [],
          "applicationDuration": "3 semaines",
          "applicationInstructions": "1x/semaine, idéalement dimanche. Appliquer 10-15 min puis pause 1 semaine.",
          "careType": "masque",
          "displayTitle": "Masque Hydratant",
          "frequency": "1x/semaine",
          "introduceFromWeek": 0,
          "isTemporary": true,
          "progressiveIntroduction": null,
          "restrictions": [
            "Temps de pose max 10-15 min",
            "Jamais le même jour qu'un traitement actif",
          ],
          "stepId": "maint-masque",
          "stepNumber": 1,
          "targetBenefit": "Boost hydratation",
          "targetProblem": "Hydratation + Apaisement",
          "targetZones": [
            "visage entier",
          ],
          "timing": "hebdomadaire",
        },
      ],
    },
  },
}
`;

exports[`Snapshots Routines Référence Snapshot 3: Expert + Complète → Routine maximale 2T + 2H: expert-complete-maximal 1`] = `
{
  "dermatologicalRationale": "Protocole anti-âge global peau mature : prévention rides + correction taches + maintien fermeté via actifs complémentaires",
  "globalAdvice": [
    "Routine Expert complète : 2 traitements quotidiens + 2 soins hebdomadaires",
    "Budget généreux 150-300€/mois : actifs haute performance optimisés",
    "Style Complète respecté : 4 étapes matin, 4 étapes soir + 2 hebdos",
    "Progression lente recommandée (peau mature sensible)",
    "Protection SPF50+ obligatoire (Vitamine C photosensibilisante)",
  ],
  "phases": {
    "adaptation": {
      "description": "Introduction progressive 2 traitements",
      "duration": "8 semaines",
      "steps": [
        {
          "alternatives": [],
          "applicationDuration": "progressive",
          "applicationInstructions": "Le matin uniquement, après nettoyage, avant hydratation. Introduction progressive.",
          "careType": "traitement",
          "displayTitle": "Traitement Éclat + Taches",
          "frequency": "quotidien",
          "introduceFromWeek": 0,
          "isTemporary": true,
          "progressiveIntroduction": null,
          "restrictions": [
            "Matin uniquement",
            "Éviter contour yeux",
          ],
          "stepId": "adap-traitement-vitC",
          "stepNumber": 1,
          "targetBenefit": "Antioxydant éclaircissant",
          "targetProblem": "Éclat + Taches",
          "targetZones": [
            "visage entier",
          ],
          "timing": "matin",
        },
        {
          "alternatives": [],
          "applicationDuration": "progressive",
          "applicationInstructions": "Le soir uniquement. Introduction très progressive (2x/sem → 3x/sem → quotidien sur 4 semaines).",
          "careType": "traitement",
          "displayTitle": "Traitement Rides + Fermeté",
          "frequency": "quotidien",
          "introduceFromWeek": 2,
          "isTemporary": true,
          "progressiveIntroduction": null,
          "restrictions": [
            "Interdit grossesse",
            "Soir uniquement",
            "Éviter contour yeux",
          ],
          "stepId": "adap-traitement-retinol-advanced",
          "stepNumber": 2,
          "targetBenefit": "Anti-âge global",
          "targetProblem": "Rides + Fermeté",
          "targetZones": [
            "visage entier",
          ],
          "timing": "soir",
        },
      ],
    },
    "immediate": {
      "description": "Stabilisation longue (peau mature)",
      "duration": "4 semaines",
      "steps": [
        {
          "alternatives": [],
          "applicationDuration": "continu",
          "applicationInstructions": "Matin sur visage humide, masser délicatement, rincer",
          "careType": "nettoyage",
          "displayTitle": "Nettoyage doux matin",
          "frequency": "quotidien",
          "introduceFromWeek": 0,
          "isTemporary": false,
          "progressiveIntroduction": null,
          "restrictions": [],
          "stepId": "imm-nettoyage-matin",
          "stepNumber": 1,
          "targetBenefit": "Préparation optimale",
          "targetProblem": "Préparation de la peau",
          "targetZones": [
            "visage entier",
          ],
          "timing": "matin",
        },
        {
          "alternatives": [],
          "applicationDuration": "continu",
          "applicationInstructions": "Soir, double nettoyage si maquillage",
          "careType": "nettoyage",
          "displayTitle": "Nettoyage doux soir",
          "frequency": "quotidien",
          "introduceFromWeek": 0,
          "isTemporary": false,
          "progressiveIntroduction": null,
          "restrictions": [],
          "stepId": "imm-nettoyage-soir",
          "stepNumber": 2,
          "targetBenefit": "Élimination impuretés",
          "targetProblem": "Préparation de la peau",
          "targetZones": [
            "visage entier",
          ],
          "timing": "soir",
        },
        {
          "alternatives": [],
          "applicationDuration": "continu",
          "applicationInstructions": "Appliquer SPF30-50 matin, renouveler si exposition prolongée",
          "careType": "protection",
          "displayTitle": "Protection SPF",
          "frequency": "quotidien",
          "introduceFromWeek": 0,
          "isTemporary": false,
          "progressiveIntroduction": null,
          "restrictions": [],
          "stepId": "imm-protection",
          "stepNumber": 3,
          "targetBenefit": "Protection UV",
          "targetProblem": "Protection solaire",
          "targetZones": [
            "visage entier",
          ],
          "timing": "matin",
        },
        {
          "alternatives": [],
          "applicationDuration": "continu",
          "applicationInstructions": "Matin avant SPF",
          "careType": "hydratation",
          "displayTitle": "Hydratation légère matin",
          "frequency": "quotidien",
          "introduceFromWeek": 0,
          "isTemporary": false,
          "progressiveIntroduction": null,
          "restrictions": [],
          "stepId": "imm-hydratation-matin",
          "stepNumber": 4,
          "targetBenefit": "Hydratation jour",
          "targetProblem": "Hydratation",
          "targetZones": [
            "visage entier",
          ],
          "timing": "matin",
        },
        {
          "alternatives": [],
          "applicationDuration": "continu",
          "applicationInstructions": "Soir après nettoyage",
          "careType": "hydratation",
          "displayTitle": "Hydratation riche soir",
          "frequency": "quotidien",
          "introduceFromWeek": 0,
          "isTemporary": false,
          "progressiveIntroduction": null,
          "restrictions": [],
          "stepId": "imm-hydratation-soir",
          "stepNumber": 5,
          "targetBenefit": "Hydratation nuit",
          "targetProblem": "Hydratation",
          "targetZones": [
            "visage entier",
          ],
          "timing": "soir",
        },
      ],
    },
    "maintenance": {
      "description": "Maintien haute performance",
      "steps": [
        {
          "alternatives": [],
          "applicationDuration": "3 semaines",
          "applicationInstructions": "1x/semaine (samedi recommandé). Appliquer 10 min, puis pause 1 semaine.",
          "careType": "exfoliation",
          "displayTitle": "Exfoliation Douce",
          "frequency": "1x/semaine",
          "introduceFromWeek": 0,
          "isTemporary": true,
          "progressiveIntroduction": null,
          "restrictions": [
            "Max 10 min",
            "Jamais le même jour qu'un traitement",
          ],
          "stepId": "maint-exfoliation",
          "stepNumber": 1,
          "targetBenefit": "Renouvellement cellulaire",
          "targetProblem": "Texture + Éclat",
          "targetZones": [
            "visage entier",
          ],
          "timing": "hebdomadaire",
        },
        {
          "alternatives": [],
          "applicationDuration": "3 semaines",
          "applicationInstructions": "1x/semaine (dimanche recommandé), jamais le même jour que l'exfoliation. Appliquer 15 min, puis pause 1 semaine.",
          "careType": "masque",
          "displayTitle": "Masque Repulpant",
          "frequency": "1x/semaine",
          "introduceFromWeek": 0,
          "isTemporary": true,
          "progressiveIntroduction": null,
          "restrictions": [
            "Max 15 min",
            "Jamais le même jour qu'exfoliation ou traitement",
          ],
          "stepId": "maint-masque-repulpant",
          "stepNumber": 2,
          "targetBenefit": "Boost fermeté",
          "targetProblem": "Hydratation + Fermeté",
          "targetZones": [
            "visage entier",
          ],
          "timing": "hebdomadaire",
        },
      ],
    },
  },
}
`;

exports[`Snapshots Routines Référence Snapshot 4: Grossesse + Confort → Aucun actif dangereux: grossesse-confort-safe 1`] = `
{
  "dermatologicalRationale": "Routine sécurisée grossesse : priorité sécurité maximale, actifs validés safe, focus hydratation/apaisement",
  "globalAdvice": [
    "⚠️ GROSSESSE : Routine 100% safe - Exclusion rétinol, acides forts, huiles essentielles",
    "Actifs privilégiés : Acide azélaïque ≤10%, niacinamide, peptides, céramides",
    "Budget Confort respecté : 1 traitement + 1 masque hebdo",
    "Protection SPF50+ indispensable (masque de grossesse prévention)",
    "Consultation dermatologue recommandée si doute sur tout produit",
  ],
  "phases": {
    "adaptation": {
      "description": "Traitements safe grossesse uniquement",
      "duration": "4 semaines",
      "steps": [
        {
          "alternatives": [],
          "applicationDuration": "progressive",
          "applicationInstructions": "Le soir uniquement. Acide azélaïque ≤10% safe pendant grossesse. Appliquer zones concernées.",
          "careType": "traitement",
          "displayTitle": "Traitement Taches + Éclat",
          "frequency": "quotidien",
          "introduceFromWeek": 0,
          "isTemporary": true,
          "progressiveIntroduction": null,
          "restrictions": [
            "Safe grossesse (<10% concentration)",
            "Soir uniquement",
            "Éviter contour yeux",
          ],
          "stepId": "adap-traitement-azelaic",
          "stepNumber": 1,
          "targetBenefit": "Éclaircissement safe",
          "targetProblem": "Taches + Éclat",
          "targetZones": [
            "joues",
            "front",
          ],
          "timing": "soir",
        },
      ],
    },
    "immediate": {
      "description": "Base durable safe grossesse",
      "duration": "3 semaines",
      "steps": [
        {
          "alternatives": [],
          "applicationDuration": "continu",
          "applicationInstructions": "Matin sur visage humide, masser délicatement, rincer",
          "careType": "nettoyage",
          "displayTitle": "Nettoyage doux matin",
          "frequency": "quotidien",
          "introduceFromWeek": 0,
          "isTemporary": false,
          "progressiveIntroduction": null,
          "restrictions": [],
          "stepId": "imm-nettoyage-matin",
          "stepNumber": 1,
          "targetBenefit": "Préparation optimale",
          "targetProblem": "Préparation de la peau",
          "targetZones": [
            "visage entier",
          ],
          "timing": "matin",
        },
        {
          "alternatives": [],
          "applicationDuration": "continu",
          "applicationInstructions": "Soir, double nettoyage si maquillage",
          "careType": "nettoyage",
          "displayTitle": "Nettoyage doux soir",
          "frequency": "quotidien",
          "introduceFromWeek": 0,
          "isTemporary": false,
          "progressiveIntroduction": null,
          "restrictions": [],
          "stepId": "imm-nettoyage-soir",
          "stepNumber": 2,
          "targetBenefit": "Élimination impuretés",
          "targetProblem": "Préparation de la peau",
          "targetZones": [
            "visage entier",
          ],
          "timing": "soir",
        },
        {
          "alternatives": [],
          "applicationDuration": "continu",
          "applicationInstructions": "Appliquer SPF30-50 matin, renouveler si exposition prolongée",
          "careType": "protection",
          "displayTitle": "Protection SPF",
          "frequency": "quotidien",
          "introduceFromWeek": 0,
          "isTemporary": false,
          "progressiveIntroduction": null,
          "restrictions": [],
          "stepId": "imm-protection",
          "stepNumber": 3,
          "targetBenefit": "Protection UV",
          "targetProblem": "Protection solaire",
          "targetZones": [
            "visage entier",
          ],
          "timing": "matin",
        },
        {
          "alternatives": [],
          "applicationDuration": "continu",
          "applicationInstructions": "Matin avant SPF",
          "careType": "hydratation",
          "displayTitle": "Hydratation légère matin",
          "frequency": "quotidien",
          "introduceFromWeek": 0,
          "isTemporary": false,
          "progressiveIntroduction": null,
          "restrictions": [],
          "stepId": "imm-hydratation-matin",
          "stepNumber": 4,
          "targetBenefit": "Hydratation jour",
          "targetProblem": "Hydratation",
          "targetZones": [
            "visage entier",
          ],
          "timing": "matin",
        },
        {
          "alternatives": [],
          "applicationDuration": "continu",
          "applicationInstructions": "Soir après nettoyage",
          "careType": "hydratation",
          "displayTitle": "Hydratation riche soir",
          "frequency": "quotidien",
          "introduceFromWeek": 0,
          "isTemporary": false,
          "progressiveIntroduction": null,
          "restrictions": [],
          "stepId": "imm-hydratation-soir",
          "stepNumber": 5,
          "targetBenefit": "Hydratation nuit",
          "targetProblem": "Hydratation",
          "targetZones": [
            "visage entier",
          ],
          "timing": "soir",
        },
      ],
    },
    "maintenance": {
      "description": "Maintien douceur",
      "steps": [
        {
          "alternatives": [],
          "applicationDuration": "3 semaines",
          "applicationInstructions": "1x/semaine. Formule douce safe grossesse (céramides, acide hyaluronique, peptides). 10 min puis pause 1 semaine.",
          "careType": "masque",
          "displayTitle": "Masque Apaisant",
          "frequency": "1x/semaine",
          "introduceFromWeek": 0,
          "isTemporary": true,
          "progressiveIntroduction": null,
          "restrictions": [
            "Formule safe grossesse",
            "Max 10 min",
            "Ingrédients doux uniquement",
          ],
          "stepId": "maint-masque-apaisant",
          "stepNumber": 1,
          "targetBenefit": "Confort cutané",
          "targetProblem": "Hydratation + Apaisement",
          "targetZones": [
            "visage entier",
          ],
          "timing": "hebdomadaire",
        },
      ],
    },
  },
}
`;
